# lendchain-backend

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
contracts/: LendChain.sol
hardhat/: hardhat.config.js
hardhat/contracts/: LendChain.sol
migrations/: 0001_create_users.sql  0002_create_loans.sql  0003_create_loan_payments.sql  0004_create_refresh_tokens.sql  0005_create_audit_log.sql
scripts/: extract-artifacts.js
src/: config.rs  errors.rs  lib.rs  main.rs
src/api/v1/: admin.rs  loans.rs  mod.rs  payments.rs  users.rs
src/blockchain/: mod.rs  polygon.rs
src/blockchain/contracts/: lendchain_abi.json  lendchain_bytecode.hex
src/db/: admin.rs  loans.rs  mod.rs  payments.rs  users.rs
src/middleware/: admin.rs  auth.rs
src/models/: loan.rs  mod.rs  payment.rs  user.rs
src/services/: admin_service.rs  loan_service.rs  mod.rs  payment_service.rs  user_service.rs  wallet_service.rs
src/utils/: calculator.rs  crypto.rs  jwt.rs  mod.rs  pagination.rs  wallet.rs
tests/common/: mod.rs
tests/integration/: mod.rs  test_loans.rs  test_users.rs
tests/unit/: mod.rs
