[package]
name = "lendchain-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lendchain-backend"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json", "bigdecimal"] }

# Environment
dotenvy = "0.15"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# BigDecimal (needed for NUMERIC columns via sqlx)
bigdecimal = { version = "0.3", features = ["serde"] }

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# Async traits
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
